[gd_scene load_steps=5 format=3]

[ext_resource type="Script" path="res://scripts/entities/base_enemy.gd" id="1_base"]
[ext_resource type="Script" path="res://scripts/components/health_component.gd" id="2_health"]
[ext_resource type="Script" path="res://scripts/components/combat_component.gd" id="3_combat"]
[ext_resource type="Script" path="res://scripts/components/movement_component.gd" id="4_move"]

[node name="BaseEnemy" type="Node2D"]
script = ExtResource("1_base")

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("2_health")

[node name="CombatComponent" type="Node" parent="."]
script = ExtResource("3_combat")

[node name="MovementComponent" type="Node" parent="."]
script = ExtResource("4_move")